Prevent content overflow

--- a/components/_common_/Container/Container.css
+++ b/components/_common_/Container/Container.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   min-height: 250px;
-  width: 100vw;
+  width: 100%;
 }
 
 .content {
